added twitter in footer

--- a/package.json
+++ b/package.json
@@ -21,9 +21,7 @@
     "deploy": "gh-pages -b master -d build"
   },
   "eslintConfig": {
-    "extends": [
-      "react-app"
-    ]
+    "extends": "react-app"
   },
   "browserslist": {
     "production": [
