--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "nikhil-portfolio-react.github.io",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://nnikhil84.github.io/nikhil-portfolio-react.github.io/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
@@ -9,8 +10,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.4",
-    "gh-pages": "^3.1.0"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -24,7 +24,7 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ] 
+    ]
   },
   "browserslist": {
     "production": [
@@ -37,5 +37,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
